--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
     <main>
         <section id="caixa">
             <div id="imagem">
             </div>
-            
-            <div>
+            <div id="conteudo">
                 <h1>Login</h1>
+                <p>
+                    Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
+                </p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="box">
+                        <span class="material-icons" id="formatação-icon1">person</span>
+                        <input type="email" name="email" id="iemail" required autocomplete="email" placeholder=" seu e-mail">
+                    </div>
+                    <div class="box">
+                        <span class="material-icons" id="formatação-icon2">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" required placeholder=" sua senha">                           
+                    </div>
+                </form>
             </div>
         </section>
-      
     </main>
 </body>
 </html>
