--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <main>
-        <section id="caixa">
+        <section id="login">
             <div id="imagem">
             </div>
-            <div id="conteudo">
+            <div id="formulario">
                 <h1>Login</h1>
                 <p>
                     Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
